<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
	android:orientation="vertical">
	<View
		android:id="@+id/statusBarBackground"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
    
    <RelativeLayout
        android:id="@+id/rl_account_setting_action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@color/bg_red" >

        <ImageButton
            android:id="@+id/account_setting_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:src="@drawable/navigaton_back" />

        <TextView
            android:id="@+id/fav_action_bar_title"
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/account_setting_back"
            android:text="@string/label_menu_account_setting" />
        
    </RelativeLayout>

	<!--<ListView-->
	    <!--android:layout_width="match_parent"-->
	    <!--android:layout_height="match_parent"-->
	    <!--android:id="@+id/lv_favlist"-->
		<!--android:background="@color/bg_white"-->
	    <!--android:divider="@null"-->
	    <!--android:layout_below="@id/rl_fav_action_bar"-->
	    <!--/>-->
    <LinearLayout
        android:id="@+id/linear_account_setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/account_facebook"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/facebook_1"
                android:textSize="16sp"
                android:drawablePadding="8dp"
                android:text="@string/facebook_name" />
            <TextView
                android:id="@+id/tv_account_facebook"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="16sp"
                android:layout_marginRight="8dp"
                android:text="@string/account_setting_bind"/>
        </LinearLayout>
        <View
            android:background="@color/main_tab_top_divider"
            android:layout_width="match_parent"
            android:layout_margin="3dp"
            android:layout_height="0.4dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/account_twitter"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/twitter_1"
                android:textSize="16sp"
                android:drawablePadding="8dp"
                android:text="@string/twitter_name" />
            <TextView
                android:id="@+id/tv_account_twitter"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="16sp"
                android:layout_marginRight="8dp"
                android:text="@string/account_setting_bind"/>
        </LinearLayout>
        <View
            android:background="@color/main_tab_top_divider"
            android:layout_width="match_parent"
            android:layout_margin="3dp"
            android:layout_height="0.4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/account_google"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/google_1"
                android:textSize="16sp"
                android:drawablePadding="8dp"
                android:text="@string/google_name" />
            <TextView
                android:id="@+id/tv_account_google"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="16sp"
                android:layout_marginRight="8dp"
                android:text="@string/account_setting_bind"/>
        </LinearLayout>
        <View
            android:background="@color/main_tab_top_divider"
            android:layout_width="match_parent"
            android:layout_margin="3dp"
            android:layout_height="0.4dp"/>
        <Button
            android:id="@+id/btn_login_out"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="60dp"
            android:layout_gravity="center_horizontal"
            style="@style/TitleTextStyle"
            android:background="@drawable/btn_login_selector"
            android:text="@string/user_login" />
    </LinearLayout>

</LinearLayout>
   

