<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:background="?view_bg"
			  android:orientation="vertical">
	<View
		android:id="@+id/statusBarBackground"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
    
    <RelativeLayout
        android:id="@+id/rl_offline_action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="?red_bg" >

        <ImageButton
            android:id="@+id/offline_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:src="@drawable/navigaton_back" />

        <TextView
            android:id="@+id/offline_action_bar_title"
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/offline_back"
            android:text="@string/label_menu_download" />

        
			<ImageButton
			    android:id="@+id/offline_action_bar_start"
            	android:layout_centerVertical="true"
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
        		android:layout_marginRight="10dp"
			    android:background="#00000000"
			    android:src="@drawable/offlinedownload_start"
			    android:layout_alignParentRight="true"
				/>
			<ImageButton
			    android:id="@+id/offline_action_bar_cancel"
				android:layout_centerVertical="true"
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
        		android:layout_marginRight="10dp"
			    android:background="#00000000"
			    android:src="@drawable/offlinedownload_cancel"
			    android:layout_alignParentRight="true"
			   	android:visibility="gone"
				/>			


        
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="16dp"
	    android:layout_marginRight="16dp"
	    android:layout_marginTop="16dp"
	    android:id="@+id/rl_offline_setting"
	    android:layout_below="@id/rl_offline_action_bar"
		android:background="?view_bg"
        >
		<TextView
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:text="@string/offline_setting_title"
		    style="@style/OfflineTitleStyle"
		    android:id="@+id/tv_offline_setting_title"
		    />			

		<View
		    android:layout_width="wrap_content"
		    android:layout_height="1dp"
		    android:layout_below="@id/tv_offline_setting_title"
		    android:layout_marginTop="4dp"
		    android:background="?bgGreyColor"
		    android:id="@+id/divider_offline_setting_title"/>
		    
		<RelativeLayout
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:id="@+id/rl_offline_dlpic"
	    	android:layout_below="@id/divider_offline_setting_title"
	    	android:layout_marginTop="6dp"
		    >

		    <TextView 
		       	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:text="@string/offline_download_pic"
				style="@style/OfflineTextStyle"
				android:layout_alignParentLeft="true"
				android:id="@+id/tv_offline_dlpic"
		        />
			<CheckBox
		        android:id="@+id/cb_offline_dlpic"
		        android:layout_width="60dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"

		        android:button="@drawable/menu_switch"
		        android:focusable="false"/>
		    
		</RelativeLayout>
		
	    <RelativeLayout
	        android:id="@+id/rl_offline_timing"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/rl_offline_dlpic">
		    
		    <TextView 
		       	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_centerVertical="true"
				android:text="@string/offline_download_time"
				style="@style/OfflineTextStyle"
		        />
		    
		    
			<CheckBox
		        android:id="@+id/cb_offline_timing"
				android:layout_width="60dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:button="@drawable/menu_switch"
		        android:focusable="false"/>
			
			<TextView
		        android:id="@+id/tv_offline_timing"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toLeftOf="@id/cb_offline_timing"
		        android:layout_marginRight="8dp"
		        android:text="00:00"
		        style="@style/OfflineTextInvalidStyle"
		        android:layout_centerVertical="true"/>
		    
		</RelativeLayout>
	
        
    
    </RelativeLayout>
    
    
    <RelativeLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="16dp"
	    android:layout_marginRight="16dp"
	    android:layout_marginTop="16dp"
	    android:id="@+id/rl_offline_ctg"
	    android:layout_below="@id/rl_offline_setting"
        >
	    
        <CheckBox
            android:id="@+id/cb_offline_select_all"
            style="@style/OfflineCheckbox"
            android:button="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:checked="false"
            android:text="@string/offline_select_all"
            android:textColor="?text_bg"
            android:textSize="14sp" />
        
		<TextView
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:text="@string/offline_select_category"
			android:visibility="invisible"
		    style="@style/OfflineTitleStyle"
		    android:id="@+id/tv_offline_ctg"
		    android:layout_alignBottom="@id/cb_offline_select_all"
		    />	
		    


		<View
		    android:layout_width="wrap_content"
		    android:layout_height="1dp"
		    android:layout_below="@id/cb_offline_select_all"
		    android:layout_marginTop="4dp"
		    android:background="?bgGreyColor"
		    android:id="@+id/divider_offline_ctg"/>
		
		<ListView
		    android:layout_width="match_parent"
		    android:layout_height="match_parent" 
		    android:id="@+id/lv_offlinelist"
			android:background="?listview_bg"
		    android:divider="@null"
		    android:layout_below="@id/divider_offline_ctg"
		    android:layout_marginTop="4dp"
	    />
	</RelativeLayout>
    

</LinearLayout>
   

